--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+    <script src="index.js" defer></script>
+</head>
 <body>
-  <script src="./index.js"></script>
+    <div id="app"></div>
 </body>
 </html>
