--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Pomodoro by Feecey | pomodoro.neant.be</title>
-    <script src="index.js" defer></script>
+    <script src="index.jsx" defer></script>
 </head>
 <body>
+    <noscript>
+		You need to enable JavaScript to run this app.
+	</noscript>
     <div id="app"></div>
 </body>
 </html>
